--- a/FossIntegrator/GetFiEvents/GetFiEvents.csproj
+++ b/FossIntegrator/GetFiEvents/GetFiEvents.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{168214D6-9645-4742-A7B9-6A2D637511B9}</ProjectGuid>
+    <ProjectGuid>{67BD384E-6756-401B-9F87-4607CDBD1A49}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>FiLimsTool</RootNamespace>
-    <AssemblyName>FiLimsTool</AssemblyName>
+    <RootNamespace>GetFiEvents</RootNamespace>
+    <AssemblyName>GetFiEvents</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NiceLittleLogger">
+      <HintPath>..\..\NiceLittleLogger\bin\Release\NiceLittleLogger.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,33 +49,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Converters.cs" />
-    <Compile Include="CsvCreator.cs" />
-    <Compile Include="FiHelpers.cs" />
+    <Compile Include="EventContent.cs" />
+    <Compile Include="FilesHelper.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="JobsContainer.cs" />
-    <Compile Include="MissingSetupForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MissingSetupForm.Designer.cs">
-      <DependentUpon>MissingSetupForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queries.cs" />
-    <Compile Include="SetupContainer.cs" />
-    <Compile Include="SpectrumLine.cs" />
-    <Compile Include="SqlServerHelper.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MissingSetupForm.resx">
-      <DependentUpon>MissingSetupForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -95,6 +83,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="DeviceID.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
