--- a/FossIntegrator/ReadEvents/ReadEvents.csproj
+++ b/FossIntegrator/ReadEvents/ReadEvents.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{168214D6-9645-4742-A7B9-6A2D637511B9}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
-    <RootNamespace>FiLimsTool</RootNamespace>
-    <AssemblyName>FiLimsTool</AssemblyName>
+    <ProjectGuid>{B28690D6-44A9-4ECA-89BD-2A53FD1875B8}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>ReadEvents</RootNamespace>
+    <AssemblyName>ReadEvents</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -39,59 +39,14 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Converters.cs" />
-    <Compile Include="CsvCreator.cs" />
-    <Compile Include="FiHelpers.cs" />
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="JobsContainer.cs" />
-    <Compile Include="MissingSetupForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MissingSetupForm.Designer.cs">
-      <DependentUpon>MissingSetupForm.cs</DependentUpon>
-    </Compile>
+    <Compile Include="FileHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queries.cs" />
-    <Compile Include="SetupContainer.cs" />
-    <Compile Include="SpectrumLine.cs" />
-    <Compile Include="SqlServerHelper.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MissingSetupForm.resx">
-      <DependentUpon>MissingSetupForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
+    <Compile Include="SqlHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
